5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1674_1099.log
== TEST (2019-04-25 10:56:45) 
-- CODE:
a = float(input("medida: "))
b = float(input("medida: "))
c = float(input("medida: "))

print("Entradas:", a, ",", b, ",", c):
	
if(a < a + b and b < a + c and c < a + b):
	if(a == b and b ==c):
		print("tipo de triangulo", "equilatero")
	elif(((a == b) and (b != c)) or ((b == c) and (c != a))):
		print("Tipo de triangulo", "isosceles")
	if((a != b) and (b != c)):
		print("Tipo de triangulo", "escaleno")
else:
	print("tipo de triangulo", "invalido")
-- ERROR:
File "XXXX", line 5
    print("Entradas:", a, ",", b, ",", c):
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:57:20) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

print("Entradas:", a, ",", b, ",", c):
	
if(a < a + b and b < a + c and c < a + b):
	if(a == b and b ==c):
		print("tipo de triangulo", "equilatero")
	elif(((a == b) and (b != c)) or ((b == c) and (c != a))):
		print("Tipo de triangulo", "isosceles")
	if((a != b) and (b != c)):
		print("Tipo de triangulo", "escaleno")
else:
	print("tipo de triangulo", "invalido")
-- ERROR:
File "XXXX", line 5
    print("Entradas:", a, ",", b, ",", c):
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:58:14) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

print("Entradas:", a, ",", b, ",", c)
	
if(a < a + b and b < a + c and c < a + b):
	if(a == b and b ==c):
		print("tipo de triangulo", "equilatero")
	elif(((a == b) and (b != c)) or ((b == c) and (c != a))):
		print("Tipo de triangulo", "isosceles")
	if((a != b) and (b != c)):
		print("Tipo de triangulo", "escaleno")
else:
	print("tipo de triangulo", "invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:58:31) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

print("Entradas:", a, ",", b, ",", c)
	
if(a < a + b and b < a + c and c < a + b):
	if(a == b and b ==c):
		print("tipo de triangulo", "equilatero")
	elif(((a == b) and (b != c)) or ((b == c) and (c != a))):
		print("Tipo de triangulo:", "isosceles")
	if((a != b) and (b != c)):
		print("Tipo de triangulo", "escaleno")
else:
	print("tipo de triangulo", "invalido")
-- EXECUTION TIME:
0.123645
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 1.0 , 2.0 , 7.0
tipo de triangulo invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:58:34) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

print("Entradas:", a, ",", b, ",", c)
	
if(a < a + b and b < a + c and c < a + b):
	if(a == b and b ==c):
		print("tipo de triangulo", "equilatero")
	elif(((a == b) and (b != c)) or ((b == c) and (c != a))):
		print("Tipo de triangulo:", "isosceles")
	if((a != b) and (b != c)):
		print("Tipo de triangulo", "escaleno")
else:
	print("tipo de triangulo", "invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:59:17) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

print("Entradas:", a, ",", b, ",", c)
	
if(a < a + b and b < a + c and c < a + b):
	if(a == b and b ==c):
		print("tipo de triangulo", "equilatero")
	elif(((a == b) and (b != c)) or ((b == c) and (c != a))):
		print("Tipo de triangulo:", "isosceles")
	if((a != b) and (b != c) and (c != a)):
		print("Tipo de triangulo", "escaleno")
else:
	print("tipo de triangulo", "invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:00:08) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

print("Entradas:", a, ",", b, ",", c)
	
if(a < c + b and b < a + c and c < a + b):
	if(a == b and b ==c):
		print("tipo de triangulo", "equilatero")
	elif(((a == b) and (b != c)) or ((b == c) and (c != a))):
		print("Tipo de triangulo:", "isosceles")
	if((a != b) and (b != c) and (c != a)):
		print("Tipo de triangulo", "escaleno")
else:
	print("tipo de triangulo", "invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:02:30) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

print("Entradas:", a, ",", b, ",", c)
	
if(a < c + b and b < a + c and c < a + b):
	if(a == b and b ==c):
		print("tipo de triangulo", "equilatero")
	elif(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
		print("Tipo de triangulo:", "isosceles")
	if((a != b) and (b != c) and (c != a)):
		print("Tipo de triangulo", "escaleno")
else:
	print("tipo de triangulo", "invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:02:40) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

print("Entradas:", a, ",", b, ",", c)
	
if(a < c + b and b < a + c and c < a + b):
	if(a == b and b ==c):
		print("tipo de triangulo", "equilatero")
	elif(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
		print("Tipo de triangulo:", "isosceles")
	if((a != b) and (b != c) and (c != a)):
		print("Tipo de triangulo", "escaleno")
else:
	print("tipo de triangulo", "invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:02:54) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

print("Entradas:", a, ",", b, ",", c)
	
if(a < c + b and b < a + c and c < a + b):
	if(a == b and b ==c):
		print("tipo de triangulo", "equilatero")
	elif(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
		print("Tipo de triangulo:", "isosceles")
	if((a != b) and (b != c) and (c != a)):
		print("Tipo de triangulo", "escaleno")
else:
	print("tipo de triangulo", "invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:03:07) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

print("Entradas:", a, ",", b, ",", c)
	
if(a < c + b and b < a + c and c < a + b):
	if(a == b and b ==c):
		print("tipo de triangulo", "equilatero")
	elif(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
		print("Tipo de triangulo:", "isosceles")
	if((a != b) and (b != c) and (c != a)):
		print("Tipo de triangulo", "escaleno")
else:
	print("tipo de triangulo", "invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:03:15) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

print("Entradas:", a, ",", b, ",", c)
	
if(a < c + b and b < a + c and c < a + b):
	if(a == b and b ==c):
		print("tipo de triangulo", "equilatero")
	elif(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
		print("Tipo de triangulo:", "isosceles")
	if((a != b) and (b != c) and (c != a)):
		print("Tipo de triangulo", "escaleno")
else:
	print("tipo de triangulo", "invalido")
-- EXECUTION TIME:
0.138762
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 1.0 , 2.0 , 7.0
tipo de triangulo invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:03:19) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

print("Entradas:", a, ",", b, ",", c)
	
if(a < c + b and b < a + c and c < a + b):
	if(a == b and b ==c):
		print("tipo de triangulo", "equilatero")
	elif(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
		print("Tipo de triangulo:", "isosceles")
	if((a != b) and (b != c) and (c != a)):
		print("Tipo de triangulo", "escaleno")
else:
	print("tipo de triangulo", "invalido")
-- EXECUTION TIME:
0.208114
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 1.0 , 2.0 , 7.0
tipo de triangulo invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:04:31) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

print("Entradas:", a, ",", b, ",", c)
	
if(a < c + b and b < a + c and c < a + b):
	if(a == b and b == c):
		print("tipo de triangulo:", "equilatero")
	elif(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
		print("Tipo de triangulo:", "isosceles")
	if((a != b) and (b != c) and (c != a)):
		print("Tipo de triangulo:", "escaleno")
else:
	print("tipo de triangulo:", "invalido")
-- EXECUTION TIME:
0.144617
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 1.0 , 2.0 , 7.0
tipo de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:04:35) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

print("Entradas:", a, ",", b, ",", c)
	
if(a < c + b and b < a + c and c < a + b):
	if(a == b and b == c):
		print("tipo de triangulo:", "equilatero")
	elif(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
		print("Tipo de triangulo:", "isosceles")
	if((a != b) and (b != c) and (c != a)):
		print("Tipo de triangulo:", "escaleno")
else:
	print("tipo de triangulo:", "invalido")
-- EXECUTION TIME:
0.158353
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 1.0 , 2.0 , 7.0
tipo de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:06:28) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

print("Entradas:", a, ",", b, ",", c)
	
if(a < c + b and b < a + c and c < a + b):
	if(a == b and b == c):
		print("tipo de triangulo:", "equilatero")
	elif:(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
		print("Tipo de triangulo:", "isosceles")
	else:
		((a != b) and (b != c) and (c != a)):
		print("Tipo de triangulo:", "escaleno")
else:
	print("tipo de triangulo:", "invalido")
-- EXECUTION TIME:
0.188207
-- ERROR:
  File "/home/codebench/codes/1674/1099/main.py", line 10
    elif:(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:08:37) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

print("Entradas:", a, ",", b, ",", c)
	
if(a < c + b and b < a + c and c < a + b):
	if(a == b and b == c):
		print("tipo de triangulo:", "equilatero")
	else:
	if(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
		print("Tipo de triangulo:", "isosceles")
	else:
		((a != b) and (b != c) and (c != a)):
		print("Tipo de triangulo:", "escaleno")
else:
	print("tipo de triangulo:", "invalido")
-- EXECUTION TIME:
0.141566
-- ERROR:
  File "/home/codebench/codes/1674/1099/main.py", line 11
    if(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
     ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:08:39) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

print("Entradas:", a, ",", b, ",", c)
	
if(a < c + b and b < a + c and c < a + b):
	if(a == b and b == c):
		print("tipo de triangulo:", "equilatero")
	else:
	if(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
		print("Tipo de triangulo:", "isosceles")
	else:
		((a != b) and (b != c) and (c != a)):
		print("Tipo de triangulo:", "escaleno")
else:
	print("tipo de triangulo:", "invalido")
-- ERROR:
File "XXXX", line 11
    if(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:09:06) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

print("Entradas:", a, ",", b, ",", c)
	
if(a < c + b and b < a + c and c < a + b):
	if(a == b and b == c):
		print("tipo de triangulo:", "equilatero")
	else:
	if(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
		print("Tipo de triangulo:", "isosceles")
	else:
		((a != b) and (b != c) and (c != a)):
		print("Tipo de triangulo:", "escaleno")
else:
	print("tipo de triangulo:", "invalido")
-- ERROR:
File "XXXX", line 11
    if(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:09:57) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

print("Entradas:", a, ",", b, ",", c)
	
if(a < c + b and b < a + c and c < a + b):
	if(a == b and b == c):
		print("tipo de triangulo:", "equilatero")
	else:
		if(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
		print("Tipo de triangulo:", "isosceles")
		else:
		((a != b) and (b != c) and (c != a)):
		print("Tipo de triangulo:", "escaleno")
else:
	print("tipo de triangulo:", "invalido")
-- EXECUTION TIME:
0.237448
-- ERROR:
  File "/home/codebench/codes/1674/1099/main.py", line 12
    print("Tipo de triangulo:", "isosceles")
        ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:10:02) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

print("Entradas:", a, ",", b, ",", c)
	
if(a < c + b and b < a + c and c < a + b):
	if(a == b and b == c):
		print("tipo de triangulo:", "equilatero")
	else:
		if(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
		print("Tipo de triangulo:", "isosceles")
		else:
		((a != b) and (b != c) and (c != a)):
		print("Tipo de triangulo:", "escaleno")
else:
	print("tipo de triangulo:", "invalido")
-- ERROR:
File "XXXX", line 12
    print("Tipo de triangulo:", "isosceles")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:10:07) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

print("Entradas:", a, ",", b, ",", c)
	
if(a < c + b and b < a + c and c < a + b):
	if(a == b and b == c):
		print("tipo de triangulo:", "equilatero")
	else:
		if(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
		print("Tipo de triangulo:", "isosceles")
		else:
		((a != b) and (b != c) and (c != a)):
		print("Tipo de triangulo:", "escaleno")
else:
	print("tipo de triangulo:", "invalido")
-- ERROR:
File "XXXX", line 12
    print("Tipo de triangulo:", "isosceles")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:10:19) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

print("Entradas:", a, ",", b, ",", c)
	
if(a < c + b and b < a + c and c < a + b):
	if(a == b and b == c):
		print("tipo de triangulo:", "equilatero")
	else:
		if(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
		print("Tipo de triangulo:", "isosceles")
		else:
		((a != b) and (b != c) and (c != a)):
		print("Tipo de triangulo:", "escaleno")
else:
	print("tipo de triangulo:", "invalido")
-- ERROR:
File "XXXX", line 12
    print("Tipo de triangulo:", "isosceles")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:10:31) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

print("Entradas:", a, ",", b, ",", c)
	
if(a < c + b and b < a + c and c < a + b):
	if(a == b and b == c):
		print("tipo de triangulo:", "equilatero")
	else:
		if(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
			print("Tipo de triangulo:", "isosceles")
		else:
		((a != b) and (b != c) and (c != a)):
		print("Tipo de triangulo:", "escaleno")
else:
	print("tipo de triangulo:", "invalido")
-- ERROR:
File "XXXX", line 14
    ((a != b) and (b != c) and (c != a)):
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:10:37) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

print("Entradas:", a, ",", b, ",", c)
	
if(a < c + b and b < a + c and c < a + b):
	if(a == b and b == c):
		print("tipo de triangulo:", "equilatero")
	else:
		if(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
			print("Tipo de triangulo:", "isosceles")
		else:
		((a != b) and (b != c) and (c != a)):
			print("Tipo de triangulo:", "escaleno")
else:
	print("tipo de triangulo:", "invalido")
-- ERROR:
File "XXXX", line 14
    ((a != b) and (b != c) and (c != a)):
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:10:47) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

print("Entradas:", a, ",", b, ",", c)
	
if(a < c + b and b < a + c and c < a + b):
	if(a == b and b == c):
		print("tipo de triangulo:", "equilatero")
	else:
		if(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
				print("Tipo de triangulo:", "isosceles")
		else:
			((a != b) and (b != c) and (c != a)):
				print("Tipo de triangulo:", "escaleno")
else:
	print("tipo de triangulo:", "invalido")
-- ERROR:
File "XXXX", line 14
    ((a != b) and (b != c) and (c != a)):
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:11:33) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

print("Entradas:", a, ",", b, ",", c)
	
if(a < c + b and b < a + c and c < a + b):
	if(a == b and b == c):
		print("tipo de triangulo:", "equilatero")
	else:
		if(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
			print("Tipo de triangulo:", "isosceles")
		else:
		((a != b) and (b != c) and (c != a)):
			print("Tipo de triangulo:", "escaleno")
else:
	print("tipo de triangulo:", "invalido")
-- EXECUTION TIME:
0.133974
-- ERROR:
  File "/home/codebench/codes/1674/1099/main.py", line 14
    ((a != b) and (b != c) and (c != a)):
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:11:35) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

print("Entradas:", a, ",", b, ",", c)
	
if(a < c + b and b < a + c and c < a + b):
	if(a == b and b == c):
		print("tipo de triangulo:", "equilatero")
	else:
		if(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
			print("Tipo de triangulo:", "isosceles")
		else:
		((a != b) and (b != c) and (c != a)):
			print("Tipo de triangulo:", "escaleno")
else:
	print("tipo de triangulo:", "invalido")
-- ERROR:
File "XXXX", line 14
    ((a != b) and (b != c) and (c != a)):
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:12:13) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

print("Entradas:", a, ",", b, ",", c)
	
if(a < c + b and b < a + c and c < a + b):
	if(a == b and b == c):
		print("tipo de triangulo:", "equilatero")
	else:
		if(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
			print("Tipo de triangulo:", "isosceles")
		else:
			print("Tipo de triangulo:", "escaleno")
else:
	print("tipo de triangulo:", "invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:12:27) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

print("Entradas:", a, ",", b, ",", c)
	
if(a < c + b and b < a + c and c < a + b):
	if(a == b and b == c):
		print("tipo de triangulo:", "equilatero")
	else:
		if(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
			print("Tipo de triangulo:", "isosceles")
		else:
			print("Tipo de triangulo:", "escaleno")
else:
	print("tipo de triangulo:", "invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:12:40) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

print("Entradas:", a, ",", b, ",", c)
	
if(a < c + b and b < a + c and c < a + b):
	if(a == b and b == c):
		print("tipo de triangulo:", "equilatero")
	else:
		if(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
			print("Tipo de triangulo:", "isosceles")
		else:
			print("Tipo de triangulo:", "escaleno")
else:
	print("tipo de triangulo:", "invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:12:49) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

print("Entradas:", a, ",", b, ",", c)
	
if(a < c + b and b < a + c and c < a + b):
	if(a == b and b == c):
		print("tipo de triangulo:", "equilatero")
	else:
		if(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
			print("Tipo de triangulo:", "isosceles")
		else:
			print("Tipo de triangulo:", "escaleno")
else:
	print("tipo de triangulo:", "invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:12:55) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

print("Entradas:", a, ",", b, ",", c)
	
if(a < c + b and b < a + c and c < a + b):
	if(a == b and b == c):
		print("tipo de triangulo:", "equilatero")
	else:
		if(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
			print("Tipo de triangulo:", "isosceles")
		else:
			print("Tipo de triangulo:", "escaleno")
else:
	print("tipo de triangulo:", "invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:13:05) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

print("Entradas:", a, ",", b, ",", c)
	
if(a < c + b and b < a + c and c < a + b):
	if(a == b and b == c):
		print("tipo de triangulo:", "equilatero")
	else:
		if(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
			print("Tipo de triangulo:", "isosceles")
		else:
			print("Tipo de triangulo:", "escaleno")
else:
	print("tipo de triangulo:", "invalido")
-- EXECUTION TIME:
0.187765
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 1.0 , 2.0 , 7.0
tipo de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:13:07) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

print("Entradas:", a, ",", b, ",", c)
	
if(a < c + b and b < a + c and c < a + b):
	if(a == b and b == c):
		print("tipo de triangulo:", "equilatero")
	else:
		if(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
			print("Tipo de triangulo:", "isosceles")
		else:
			print("Tipo de triangulo:", "escaleno")
else:
	print("tipo de triangulo:", "invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:15:07) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

print("Entradas:", a, ",", b, ",", c)
if((a >= 0) and (b >= 0) and (c >= 0)):
	if(a < c + b and b < a + c and c < a + b):
		if(a == b and b == c):
			print("tipo de triangulo:", "equilatero")
		else:
			if(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
				print("Tipo de triangulo:", "isosceles")
			else:
				print("Tipo de triangulo:", "escaleno")
else:
	print("tipo de triangulo:", "invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:15:10) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

print("Entradas:", a, ",", b, ",", c)
if((a >= 0) and (b >= 0) and (c >= 0)):
	if(a < c + b and b < a + c and c < a + b):
		if(a == b and b == c):
			print("tipo de triangulo:", "equilatero")
		else:
			if(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
				print("Tipo de triangulo:", "isosceles")
			else:
				print("Tipo de triangulo:", "escaleno")
else:
	print("tipo de triangulo:", "invalido")
-- EXECUTION TIME:
0.192169
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 1.0 , 2.0 , 7.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:15:45) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))
print("Entradas:", a, ",", b, ",", c)
if((a >= 0) and (b >= 0) and (c >= 0)):
	if(a < c + b and b < a + c and c < a + b):
		if(a == b and b == c):
			print("tipo de triangulo:", "equilatero")
		else:
			if(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
				print("Tipo de triangulo:", "isosceles")
			else:
				print("Tipo de triangulo:", "escaleno")
else:
	print("tipo de triangulo:", "invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:16:49) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))
print("Entradas:", a, ",", b, ",", c)
if((a >= 0) and (b >= 0) and (c >= 0)):
	if((a < c + b) and (b < a + c) and (c < a + b)):
		if(a == b and b == c):
			print("tipo de triangulo:", "equilatero")
		else:
			if(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
				print("Tipo de triangulo:", "isosceles")
			else:
				print("Tipo de triangulo:", "escaleno")
else:
	print("tipo de triangulo:", "invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:18:45) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))
print("Entradas:", a, ",", b, ",", c)
if((a >= 0) and (b >= 0) and (c >= 0)):
	if((a < c + b) and (b < a + c) and (c < a + b)):
		print("Tipo de triangulo:", "invalido")
		if(a == b and b == c):
			print("Tipo de triangulo:", "equilatero")
		else:
			if(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
				print("Tipo de triangulo:", "isosceles")
			else:
				print("Tipo de triangulo:", "escaleno")
else:
	print("tipo de triangulo:", "invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:20:40) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))
print("Entradas:", a, ",", b, ",", c)
if((a >= 0) and (b >= 0) and (c >= 0)):
	if((a < c + b) and (b < a + c) and (c < a + b)):
		print("Tipo de triangulo:", "invalido")
	else:
	(a == b and b == c):
		print("Tipo de triangulo:", "equilatero")
		if(((a == b) and (b != c)) or ((b == c) and (c != a)) or ((c == a) and (c != b))):
				print("Tipo de triangulo:", "isosceles")
		else:
				print("Tipo de triangulo:", "escaleno")
else:
	print("tipo de triangulo:", "invalido")
-- ERROR:
File "XXXX", line 9
    (a == b and b == c):
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:27:40) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

if((a < b + c) and (b < a + c) and (c < b + a)):
	if((a != b) and (b != c) and (c != a)):
		print("escaleno")
	else:
		if((a != b) or(b != c)):
			print("Tipo de triangulo","isosceles")  
		else:
			print("Tipo de triangulo","equilatero")
else:print("Tipo de triangulo", "invalido")
-- OUTPUT:
Tipo de triangulo isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:28:24) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

if((a < b + c) and (b < a + c) and (c < b + a)):
	if((a != b) and (b != c) and (c != a)):
		print("Tipo de triangulo:","escaleno")
	else:
		if((a != b) or(b != c)):
			print("Tipo de triangulo:","isosceles")  
		else:
			print("Tipo de triangulo:","equilatero")
else:print("Tipo de triangulo:", "invalido")
-- EXECUTION TIME:
0.21502
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Tipo de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:28:26) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

if((a < b + c) and (b < a + c) and (c < b + a)):
	if((a != b) and (b != c) and (c != a)):
		print("Tipo de triangulo:","escaleno")
	else:
		if((a != b) or(b != c)):
			print("Tipo de triangulo:","isosceles")  
		else:
			print("Tipo de triangulo:","equilatero")
else:print("Tipo de triangulo:", "invalido")
-- OUTPUT:
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:28:42) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

if((a < b + c) and (b < a + c) and (c < b + a)):
	if((a != b) and (b != c) and (c != a)):
		print("Tipo de triangulo:","escaleno")
	else:
		if((a != b) or(b != c)):
			print("Tipo de triangulo:","isosceles")  
		else:
			print("Tipo de triangulo:","equilatero")
else:print("Tipo de triangulo:", "invalido")
-- OUTPUT:
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:28:51) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

if((a < b + c) and (b < a + c) and (c < b + a)):
	if((a != b) and (b != c) and (c != a)):
		print("Tipo de triangulo:","escaleno")
	else:
		if((a != b) or(b != c)):
			print("Tipo de triangulo:","isosceles")  
		else:
			print("Tipo de triangulo:","equilatero")
else:print("Tipo de triangulo:", "invalido")
-- OUTPUT:
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:29:13) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))

if((a < b + c) and (b < a + c) and (c < b + a)):
	if((a != b) and (b != c) and (c != a)):
		print("Tipo de triangulo:","escaleno")
	else:
		if((a != b) or (b != c)):
			print("Tipo de triangulo:","isosceles")  
		else:
			print("Tipo de triangulo:","equilatero")
else:print("Tipo de triangulo:", "invalido")
-- EXECUTION TIME:
0.225116
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Tipo de triangulo: invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:30:55) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))
if((a != 0 and (b != 0) and (c != 0))
	if((a < b + c) and (b < a + c) and (c < b + a)):
		if((a != b) and (b != c) and (c != a)):
			print("Tipo de triangulo:","escaleno")
		else:
			if((a != b) or (b != c)):
				print("Tipo de triangulo:","isosceles")  
			else:
				print("Tipo de triangulo:","equilatero")
else:print("Tipo de triangulo:", "invalido")
-- ERROR:
File "XXXX", line 5
    if((a < b + c) and (b < a + c) and (c < b + a)):
                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:31:09) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))
if((a != 0) and (b != 0) and (c != 0))
	if((a < b + c) and (b < a + c) and (c < b + a)):
		if((a != b) and (b != c) and (c != a)):
			print("Tipo de triangulo:","escaleno")
		else:
			if((a != b) or (b != c)):
				print("Tipo de triangulo:","isosceles")  
			else:
				print("Tipo de triangulo:","equilatero")
else:print("Tipo de triangulo:", "invalido")
-- ERROR:
File "XXXX", line 4
    if((a != 0) and (b != 0) and (c != 0))
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:31:26) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))
if((a != 0) and (b != 0) and (c != 0)):
	if((a < b + c) and (b < a + c) and (c < b + a)):
		if((a != b) and (b != c) and (c != a)):
			print("Tipo de triangulo:","escaleno")
		else:
			if((a != b) or (b != c)):
				print("Tipo de triangulo:","isosceles")  
			else:
				print("Tipo de triangulo:","equilatero")
else:print("Tipo de triangulo:", "invalido")
-- OUTPUT:
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:31:37) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))
if((a != 0) and (b != 0) and (c != 0)):
	if((a < b + c) and (b < a + c) and (c < b + a)):
		if((a != b) and (b != c) and (c != a)):
			print("Tipo de triangulo:","escaleno")
		else:
			if((a != b) or (b != c)):
				print("Tipo de triangulo:","isosceles")  
			else:
				print("Tipo de triangulo:","equilatero")
else:print("Tipo de triangulo:", "invalido")
-- OUTPUT:
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:32:19) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))
if((a != 0) and (b != 0) and (c != 0)):
	if((a < b + c) and (b < a + c) and (c < b + a)):
		print("Tipo de triangulo:","invalido")
		if((a != b) and (b != c) and (c != a)):
			print("Tipo de triangulo:","escaleno")
		else:
			if((a != b) or (b != c)):
				print("Tipo de triangulo:","isosceles")  
			else:
				print("Tipo de triangulo:","equilatero")
else:print("Tipo de triangulo:", "invalido")
-- OUTPUT:
Tipo de triangulo: invalido
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:33:28) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))
if((a != 0) and (b != 0) and (c != 0)):
	if((a < b + c) and (b < a + c) and (c < b + a)):
		print("Tipo de triangulo:","invalido")
		if((a != b) and (b != c) and (c != a)):
			print("Tipo de triangulo:","escaleno")
		else:
			if((a == b) or (b == c)):
				print("Tipo de triangulo:","isosceles")  
			else:
				print("Tipo de triangulo:","equilatero")
else:print("Tipo de triangulo:", "invalido")
-- EXECUTION TIME:
0.153978
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Tipo de triangulo: invalido
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Tipo de triangulo: invalido
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:33:29) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))
if((a != 0) and (b != 0) and (c != 0)):
	if((a < b + c) and (b < a + c) and (c < b + a)):
		print("Tipo de triangulo:","invalido")
		if((a != b) and (b != c) and (c != a)):
			print("Tipo de triangulo:","escaleno")
		else:
			if((a == b) or (b == c)):
				print("Tipo de triangulo:","isosceles")  
			else:
				print("Tipo de triangulo:","equilatero")
else:print("Tipo de triangulo:", "invalido")
-- OUTPUT:
Tipo de triangulo: invalido
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:35:04) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))
if((a != 0) and (b != 0) and (c != 0)):
	if((a < b + c) and (b < a + c) and (c < b + a)):
		print("Tipo de triangulo: invalido")
		if((a != b) and (b != c) and (c != a)):
			print("Tipo de triangulo: escaleno")
		else:
			if((a == b) or (b == c)):
				print("Tipo de triangulo: isosceles")  
			else:
				print("Tipo de triangulo: equilatero")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Tipo de triangulo: invalido
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:36:18) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))
print("Entradas:", a, ",", b, ",", c)
if((a != 0) and (b != 0) and (c != 0)):
	if((a < b + c) and (b < a + c) and (c < b + a)):
		print("Tipo de triangulo: invalido")
		if((a != b) and (b != c) and (c != a)):
			print("Tipo de triangulo: escaleno")
		else:
			if((a == b) or (b == c)):
				print("Tipo de triangulo: isosceles")  
			else:
				print("Tipo de triangulo: equilatero")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: invalido
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:37:26) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))
print("Entradas:", a, ",", b, ",", c)
if((a != 0) and (b != 0) and (c != 0)):
	if((a < b + c) and (b < a + c) and (c < b + a)):
	
		if((a != b) and (b != c) and (c != a)):
			print("Tipo de triangulo: escaleno")
		else:
			if((a == b) or (b == c)):
				print("Tipo de triangulo: isosceles")  
			else:
				print("Tipo de triangulo: equilatero")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:37:35) 
-- CODE:
a = float(input("medidaa: "))
b = float(input("medidab: "))
c = float(input("medidac: "))
print("Entradas:", a, ",", b, ",", c)
if((a != 0) and (b != 0) and (c != 0)):
	if((a < b + c) and (b < a + c) and (c < b + a)):
	
		if((a != b) and (b != c) and (c != a)):
			print("Tipo de triangulo: escaleno")
		else:
			if((a == b) or (b == c)):
				print("Tipo de triangulo: isosceles")  
			else:
				print("Tipo de triangulo: equilatero")
	else:
		print("Tipo de triangulo: invalido")
else:
	print("Tipo de triangulo: invalido")
-- EXECUTION TIME:
0.19769
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
